src/alefba-src/src/stylesheets/footer.scss
#footer {
    height: 10vw;
    border-style: solid;
    border-top-color: rgba(255, 255, 255, 0.25);
    border-width: 0.5px;
    white-space: nowrap;
}

#company {
    color: white;
    font-family: iran-yekan, serif;
    font-size: 0.9vw;
    width: 15.625vw;
    direction: rtl;
}

#footer-title {
    color: white;
    font-family: iran-yekan, serif;
    font-size: 1vw;
}

#contact-text {
    color: white;
    font-family: iran-yekan, serif;
    width: 4.5vw;
    font-size: 1vw;
}

#join-text {
    color: white;
    font-family: iran-yekan, serif;
    font-size: 1vw;
    width: 5.078125vw;
}

#email {
    color: white;
    font-family: iran-yekan, serif;
    font-size: 1.1vw;
    width: 9.375vw;
}

#icon-title-footer {
    position: absolute;
    display: flex;
    margin-top: 5vh;
    margin-right: 7.8125vw;
    margin-left: 87.109375vw;
    justify-content: center;
    align-items: center;
    flex-direction: row;
}

#icon-footer {
    height: 2.8vw;
    width: 3.8vw;
}

#contact-footer {
    position: absolute;
    display: flex;
    justify-content: space-between;
    align-items: end;
    flex-direction: column;
    height: 10vh;
    width: 4.5vw;
    margin-top: 4.6vh;
    margin-right: 58.59375vw;
    margin-left: 39.0625vw;
}

#email-footer {
    position: absolute;
    display: flex;
    margin-right: 74.21875vw;
    height: 10vh;
    margin-top: 5vh;
    margin-left: 10.546875vw;
    justify-content: space-between;
    align-items: flex-end;
    flex-direction: column;
}

a {
    text-decoration: none;
}

#email:hover {
    color: #ff6200;
}

#contact-text:hover {
    color: #ff6200;
}

#join-text:hover {
    color: #ff6200;
}

@media screen and (max-width: 500px) {
    #contact-footer {
        display: none;
        margin: 0;
        height: 0;
        width: 0;
    }

    #footer {
        border-style: none;
        display: flex;
        flex-direction: column;
        justify-content: center;
        align-items: flex-end;
    }

    #email-footer {
        position: absolute;
        justify-content: space-between;
        align-items: flex-end;
        margin-bottom: 15vh;
        margin-right: 5vw;
    }

    #icon-title-footer {
        margin-bottom: 37vh;
        position: relative;
        display: flex;
        flex-direction: row;
    }

    #footer-title {
        font-size: 5vw;
        padding-right: 1.4vw;
    }

    #icon-footer {
        height: 4vh;
        margin-bottom: 8vh;
        width: 15vw;
    }

    #email {
        font-size: 4vw;
        height: 3.5211267605633805vh;
        width: 35vw;
    }

    #company {
        font-size: 3.5vw;
        height: 2.7777777777777777vh;
        width: 60vw;
    }
}

